# rust-actix-rest

./: .env  Cargo.toml
src/: handlers.rs  main.rs
src/model/: user.rs
