[package]
name = "actixprac"
version = "0.1.0"
authors = ["hodongman <jhd9206@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dotenv = "0.15.0"

actix-web = "3.0.0"

actix-service = "2.0.0"

actix-rt = "1.0.0"
